--- a/css/styles.css
+++ b/css/styles.css
@@ -592,7 +592,7 @@ nav li a {
 .transparent-img {
     height: 40vh;
     position: relative;
-    background: url('https://preview.colorlib.com/theme/jackson/images/xcover_bg_1.jpg.pagespeed.ic.qP4siTb4Tv.webp');
+    background: url('https://images.pexels.com/photos/1591060/pexels-photo-1591060.jpeg');
     background-size: cover;
     background-attachment: fixed;
     background-position: center center;
